can now remove items from shopping cart

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
                 <td></td>
                 <td></td>
                 <td>Total Cost</td>
-                <td>{{total()}}</td>
+                <td>{{total() | currency : "£" : 2}}</td>
             </tr>
 
     </div>
