--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,50 @@
 <html ng-app="shopApp">
 <head>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1>Welcome to CropShop</h1>
-<div ng-controller="ItemListCtrl" id="products">
+ <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+     <div class="container">
+         <div class="navbar-header">
+             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+             </button>
+             <a class="navbar-brand" href="#">CropShop</a>
+         </div>
+         <div id="navbar" class="collapse navbar-collapse">
+             <ul class="nav navbar-nav">
+                 <li class="active"><a href="#">Store</a></li>
+                 <li><a href="#about">About</a></li>
+                 <li><a href="#contact">Contact</a></li>
+             </ul>
+         </div><!--/.nav-collapse -->
+     </div>
+</nav>
+<div class="container page" ng-controller="ItemListCtrl" id="products">
     <ul class="products-list">
-        <li class="product" ng-repeat="product in products">
-            <h1>{{product.name}}</h1>
-            <p>{{product.category}}</p>
-            <p>{{product.price | currency : "£" : 2 }}</p>
-            [<a href ng-click="addItem($index)">Add to cart</a>]
-        </li>
+        <div class = "container">
+            <div class="container">
+                <div class="product col-md-6 col-xs-12" ng-repeat="product in products">
+                    <h1>{{product.name}}</h1>
+                    <p>{{product.category}}</p>
+                    <p>{{product.price | currency : "£" : 2 }}</p>
+                    <a href class="btn btn-success btn-sm" ng-click="addItem($index)" id="add-item">Add to cart</a>
+                </div>
+            </div>
+        </div>
     </ul>
 </div>
 
     <div ng-controller="ShopCartCtrl" id="shopping-cart">
-        <table class="basket">
+        <table class="basket table table-striped">
             <tr>
                 <th>Item</th>
                 <th>Quantity</th>
@@ -31,14 +57,14 @@
                 <td ng-model="item.price">{{item.price | currency : "£" : 2}}</td>
                 <td>{{item.price * item.qty | currency : "£" : 2 }}</td>
                 <td>
-                    [<a href ng-click="removeItem($index)">X</a>]
+                    <a href class="btn btn-danger btn-sm" ng-click="removeItem($index)" id="remove-item">Remove</a>
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td></td>
                 <td> Sub-total</td>
-                <td>{{total() | currency : "£" : 2}}</td>
+                <td id="sub-total">{{total() | currency : "£" : 2}}</td>
             </tr>
             <tr>
                 <td></td>
@@ -57,6 +83,9 @@
 
     </div>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 </body>
