--- a/app/index.html
+++ b/app/index.html
@@ -1,50 +1,49 @@
 <html ng-app="shopApp">
-<head>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-    <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
- <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-     <div class="container">
-         <div class="navbar-header">
-             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                 <span class="sr-only">Toggle navigation</span>
-                 <span class="icon-bar"></span>
-                 <span class="icon-bar"></span>
-                 <span class="icon-bar"></span>
-             </button>
-             <a class="navbar-brand" href="#">CropShop</a>
-         </div>
-         <div id="navbar" class="collapse navbar-collapse">
-             <ul class="nav navbar-nav">
-                 <li class="active"><a href="#">Store</a></li>
-                 <li><a href="#about">About</a></li>
-                 <li><a href="#contact">Contact</a></li>
-             </ul>
-         </div><!--/.nav-collapse -->
-     </div>
-</nav>
-<div class="container page" ng-controller="ItemListCtrl" id="products">
-    <ul class="products-list">
-        <div class = "container">
+    <head>
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+        <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">CropShop</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Store</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+    <div class="container page" ng-controller="ItemListCtrl" id="products">
             <div class="container">
-                <div class="product col-md-6 col-xs-12" ng-repeat="product in products">
-                    <h1>{{product.name}}</h1>
-                    <p>{{product.category}}</p>
-                    <p>{{product.price | currency : "£" : 2 }}</p>
-                    <a href class="btn btn-success btn-sm" ng-click="addItem($index)" id="add-item">Add to cart</a>
+                <div class="row">
+                    <div class="product col-lg-4 col-md-6 col-xs-12" ng-repeat="product in products">
+                        <h4 class="item">{{product.name}}</h4>
+                        <img class= "item img-responsive icon" src="img/products/{{product.img}}">
+                        <p class="item">{{product.category}} </p>
+                        <p class="item">{{product.price | currency : "£" : 2 }}</p>
+                        <a href class="item btn btn-success btn-sm" ng-click="addItem($index)" id="add-item">Add to cart</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </ul>
-</div>
+    </div>
 
     <div ng-controller="ShopCartCtrl" id="shopping-cart">
-        <table class="basket table table-striped">
+        <table ng-show= "invoice.length >  0" class="basket table table-striped table-bordered">
             <tr>
                 <th>Item</th>
                 <th>Quantity</th>
@@ -52,41 +51,45 @@
                 <th>Total</th>
             </tr>
             <tr ng-repeat='item in invoice'</tr>
-                <td>{{item.name}}</td>
-                <td><select ng-options="stock for stock in range(1, item.stockLeft)" ng-model="item.qty" ng-required </select></td>
-                <td ng-model="item.price">{{item.price | currency : "£" : 2}}</td>
-                <td>{{item.price * item.qty | currency : "£" : 2 }}</td>
-                <td>
-                    <a href class="btn btn-danger btn-sm" ng-click="removeItem($index)" id="remove-item">Remove</a>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td> Sub-total</td>
-                <td id="sub-total">{{total() | currency : "£" : 2}}</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td>Final cost</td>
-                <td>{{applyDiscount(total()) | currency : "£" : 2}}</td>
-            </tr>
-            <tr ng-show="invoice.length > 0">
-                <td></td>
-                <td>[<a href ng-click="selectDiscount('standardDiscount')">£5 off!</a>]</td>
-                <td ng-show="total() > 50">[<a href ng-click="selectDiscount('overFifty')">£10 off!</a>]</td>
-                <td ng-show="total() > 75 && hasFootwear()">[<a href ng-click="selectDiscount('overSeventyFive')">£15 off!</a>]</td>
-            </tr>
+            <td>{{item.name}}</td>
+            <td><select ng-options="stock for stock in range(1, item.stockLeft)" ng-model="item.qty" ng-required </select></td>
+            <td ng-model="item.price">{{item.price | currency : "£" : 2}}</td>
+            <td>{{item.price * item.qty | currency : "£" : 2 }}</td>
+            <td>
+                <a href class="btn btn-danger btn-sm" ng-click="removeItem($index)" id="remove-item">Remove</a>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td> Sub-total</td>
+            <td id="sub-total">{{total() | currency : "£" : 2}}</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>Final cost</td>
+            <td>{{applyDiscount(total()) | currency : "£" : 2}}</td>
+            <td></td>
+        </tr>
+        <tr ng-show="invoice.length > 0">
+            <td></td>
+            <td>[<a href ng-click="selectDiscount('standardDiscount')">£5 off!</a>]</td>
+            <td ng-show="total() > 50">[<a href ng-click="selectDiscount('overFifty')">£10 off!</a>]</td>
+            <td ng-show="total() > 75 && hasFootwear()">[<a href ng-click="selectDiscount('overSeventyFive')">£15 off!</a>]</td>
+            <td></td>
+        </tr>
+    </table>
 
 
 
-    </div>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-</body>
-</html>
+        </div>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/services.js"></script>
+    </body>
+    </html>
